i am fffucin stronger

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </a>
       </div>
       <!-- part-1  -->
-      <div class="filimobox_part-1">
+      <!-- <div class="filimobox_part-1">
         <div class="filimobox_part-1_text">
           <h1>فیلیمو باکس!</h1>
           <p>
@@ -115,7 +115,7 @@
             </svg>
           </a>
         </div>
-      </div>
+      </div> -->
       <!-- part-2  -->
       <div class="filimobox_part-2">
         <div class="filimobox_wrapper">
